# server/internal/server/api/list/api.go
@@ -2,6 +2,7 @@ package list
 
 import (
 	"github.com/emonadeo/gdol/internal/core"
+	"github.com/emonadeo/gdol/internal/server/api/list/archive"
 	"github.com/emonadeo/gdol/internal/server/api/list/settings"
 	"github.com/labstack/echo/v5"
 )
@@ -9,6 +10,7 @@ import (
 func Bind(app *core.App, group *echo.Group) {
 	api := api{app}
 	settings.Bind(app, group.Group("/settings"))
+	archive.Bind(app, group.Group("/archive"))
 	group.GET("", api.getList)
 	group.POST("/:rank", api.updateList)
 	group.GET("/:rank", api.getLevelByRank)
