# server/internal/server/api/list/archive/api.go
@@ -1,0 +1,15 @@
+package archive
+
+import (
+	"github.com/emonadeo/gdol/internal/core"
+	"github.com/labstack/echo/v5"
+)
+
+func Bind(app *core.App, group *echo.Group) {
+	api := api{app}
+	group.GET("", api.getListArchive)
+}
+
+type api struct {
+	app *core.App
+}
